--- a/src/app/exam/quize-report/quize-report.component.html
+++ b/src/app/exam/quize-report/quize-report.component.html
@@ -22,11 +22,10 @@
           Attempt Number -
           <span class="spanContent">{{ quizeAttemptNumber }}</span>
         </h5>
-        <h5 class="reportCard">
+        <h5 class="reportCard" *ngIf="quizeAttemptNumber > 1">
           Check Previous report -
           <select name="" id="" (change)="data($event)">
             Select Attempt Number
-            <!-- <option selected>select Attempt</option> -->
             <option *ngFor="let attempts of attempDropdown" [value]="attempts.id" >
               {{ attempts.position }}
             </option>
@@ -120,41 +119,79 @@
         <div class="card lastCard">
           <div class="row">
             <div class="col-xl-8 col-lg-12">
+
               <div>
-                <h2 *ngIf="percentage >= 85">
+                <h2 *ngIf="percentage >= 95">
                   <span>Excellent!</span> Well done! Keep it Up!.
                 </h2>
-                <h2 *ngIf="percentage >= 60 && percentage <= 84">
+
+                <h2 *ngIf="percentage >= 85 && percentage <= 94">
+                  <span style="color: orange">Going Very Good!</span> Keep
+                  Practicing.
+                </h2>
+
+                <h2 *ngIf="percentage >= 80 && percentage <= 84">
                   <span style="color: orange">Going Good!</span> Keep
                   Practicing.
                 </h2>
-                <h2 *ngIf="percentage <= 40">
-                  <span style="color: orangered">Oops!</span> You didn't perform
-                  well this time. You need to Practice more.
+
+                <h2 *ngIf="percentage >= 70 && percentage <= 79">
+                  <span style="color: orange">Good!</span> You are on right track, keep Practicing.
                 </h2>
-                <h2 *ngIf="percentage >= 41 && percentage <= 59">
-                  <span style="color: blue">Hmm!</span> You Need To Practice
-                  More!
+
+                <h2 *ngIf="percentage >= 60 && percentage <= 69">
+                  <span style="color: orange">Good!</span> You are on right track, keep Practicing.
                 </h2>
+
+                <h2 *ngIf="percentage >= 35 && percentage <= 59">
+                    <span style="color: orangered">Oops!</span> You didn't perform
+                    well this time. You need to Practice more.
+                  </h2>
+
+                <h2 *ngIf="percentage >= 35 && percentage <= 59">
+                    <span style="color: orangered">Hmmm!</span> You didn't perform
+                    well this time.
+                  </h2>
               </div>
+
               <div>
-                <p *ngIf="percentage >= 85">
+                <p *ngIf="percentage >= 95">
                   You are excellent in <b>{{ quiz_pool_name }}</b> with
-                  <b>{{ percentage }}%</b> . Well done, keep it up!
+                  <b>{{ percentage }}%</b> and grade is <b>A++. </b>/b> Well done, keep it up!
                 </p>
-                <p *ngIf="percentage >= 60 && percentage <= 84">
-                  You are Good in <b>{{ quiz_pool_name }}</b> with
-                  <b>{{ percentage }}%</b>. Well done, keep it up!
+
+                <p *ngIf="percentage >= 85 && percentage <= 94">
+                  You are very Good in <b>{{ quiz_pool_name }}</b> with
+                  <b>{{ percentage }}%</b>. and grade is <b>A+.</b> Well done, keep it up!
                 </p>
-                <p *ngIf="average">
-                  You are doing good enough in <b>{{ quiz_pool_name }}</b> with
-                  {{ resultPrediction }}% . But you need more practice.
+
+                <p *ngIf="percentage >= 80 && percentage <= 84">
+                    You are Good in <b>{{ quiz_pool_name }}</b> with
+                    <b>{{ percentage }}%</b>. and grade is <b>A.</b> Well done, keep it up!
                 </p>
-                <p *ngIf="percentage <= 40">
-                  Its Seem You have not study well these time, Try to do better
-                  next Time. BETTER LUCK NEXT TIME :)
+
+                <p *ngIf="percentage >= 70 && percentage <= 79">
+                    You are Good enough in <b>{{ quiz_pool_name }}</b> with
+                    <b>{{ percentage }}%</b>. and grade is <b>B.</b> Well done, keep it up!
                 </p>
+
+                <p *ngIf="percentage >= 60 && percentage <= 69">
+                    You are Good in <b>{{ quiz_pool_name }}</b> with
+                    <b>{{ percentage }}%</b>. and grade is <b>C.</b> Well done, keep it up!
+                </p>
+
+                <p *ngIf="percentage >= 35 && percentage <= 59">
+                    You are AVARAGE in <b>{{ quiz_pool_name }}</b> with
+                    <b>{{ percentage }}%</b> Need practice More!
+                </p>
+
+                <p *ngIf="percentage <= 35 ">
+                    You are <b style="color: orangered">FAIL</b>  in <b> {{ quiz_pool_name }} </b> with
+                    <b>{{ percentage }}% </b> BETTER LUCK NEXT TIME <b>:)</b> !
+                </p>
+
               </div>
+
             </div>
             <div class="col-xl-4 col-lg-12">
               <div>
