--- a/src/app/exam/exam-details/exam-details.component.html
+++ b/src/app/exam/exam-details/exam-details.component.html
@@ -7,6 +7,7 @@
           <h6>Attempt Number - {{ attemptNUmber }} </h6> &nbsp;&nbsp; &nbsp;&nbsp;
           <h6 *ngIf="attemptNUmber > 1">Select the previous attempt for details-
             <select class="form-control" id="" (change)="changeDetails($event)">Select Attempt
+              <option selected>select attempt number</option>
               <option [value]="attempt.id" *ngFor="let attempt of attemptDropdown">{{ attempt.position }}</option>
             </select>
           </h6>
