--- a/src/app/exam/quize-report/quize-report.component.css
+++ b/src/app/exam/quize-report/quize-report.component.css
@@ -321,7 +321,7 @@
     display: flex;
     flex-direction: row; 
     align-items: center; 
-    /* margin-top: 20px;  */
+    margin-top: 10px;
     
   }
   
@@ -337,4 +337,12 @@
   } 
   .topCard .timeBox{
     height: 115px !important;
+  }
+  .boxData {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .boxData h4 {
+    margin-bottom: 0;
   }
