--- a/src/app/exam/report/report.component.css
+++ b/src/app/exam/report/report.component.css
@@ -320,3 +320,8 @@
   .spanContent{
     color: #ffcc03;
   }
+  .mainChart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
