--- a/src/app/exam/report/report.component.html
+++ b/src/app/exam/report/report.component.html
@@ -19,7 +19,7 @@
             <hr>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 mainChart">
                 <div class="d-flex justify-content-center" style="height: 270px;" *ngIf="showGraph">
                     
                     <highcharts-chart [Highcharts]="highcharts" [options]="chartOptions" class="highchartsStyle">
