--- a/src/app/exam/quize-report/quize-report.component.css
+++ b/src/app/exam/quize-report/quize-report.component.css
@@ -143,7 +143,7 @@
   }
   
   .practiceReport .topCard {
-    box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%);
+    /* box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 50%); */
     border-radius: 10px;
     padding: 60px 10px;
     display: flex;
@@ -184,7 +184,7 @@
     border-style: solid;
     border-width: 0px 0px 0px 5px;
     border-color: #007bba;
-    box-shadow: 29px 29px 60px 0px rgb(0 0 0 / 20%);
+    /* box-shadow: 29px 29px 60px 0px rgb(0 0 0 / 20%); */
     padding: 36px;
     margin-top: 50px;
   }
