--- a/src/app/exam/quize-report/quize-report.component.html
+++ b/src/app/exam/quize-report/quize-report.component.html
@@ -100,7 +100,6 @@
           <div class="timeBox">
             <div class="col-md-12 boxData">
               <div >
-                
                   <dl class="row dataShow ">
                     <dt class="col-sm-6"><h6>Test Name</h6></dt>
                     <dd class="col-sm-6"><h6>: {{ quiz_pool_name }}</h6></dd>
@@ -121,8 +120,11 @@
             <div class="col-md-6">
               <div>
                 you have take the
-                <h5>{{ totalTimeSpentForExam }} Min</h5>
+                <br>
+                <br>
+                <h4>{{ totalTimeSpentForExam }}</h4>
               </div>
+              <br>
               <div>
                 <h6>to solve test</h6>
               </div>
