--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -42,7 +42,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <h3 class="chairmansNameMobile">Shantanu Kumar <br> <span>Founder & CEO</span></h3>
+                                    <h3 class="chairmansNameMobile">Puneet Chandra <br> <span>Founder & CEO</span></h3>
                                 </div>
                             </div>
                             <div class="col-md-8">
@@ -70,7 +70,7 @@
                                     their future), a parent(who want to provide the best resources to their child) or a
                                     mentor (who needs the right tools for their students) – you would love our platform.
                                 </p>
-                                <h3 class="chairmansNameDesktop">Shantanu Kumar <br> <span>Founder & CEO</span></h3>
+                                <h3 class="chairmansNameDesktop">Puneet Chandra <br> <span>Founder & CEO</span></h3>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Shantanu Kumar <br> <span>VP (Operations)</span></p>
+                                        <p>Puneet Chandra <br> <span>VP (Operations)</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -107,7 +107,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Vipul Ray <br> <span>VP (Content)</span></p>
+                                        <p>Deepak Singh <br> <span>VP (Content)</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Badal Pal <br> <span>CTO</span></p>
+                                        <p>Vishal Singh <br> <span>CTO</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -135,7 +135,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Aman Kumar <br> <span>VP (Product)</span></p>
+                                        <p>Imran Rashid  <br> <span>VP (Product)</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -148,7 +148,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Yash Trivedi <br> <span>VP (Acad Operations)</span></p>
+                                        <p>Anjali Mishra <br> <span>VP (Acad Operations)</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -162,7 +162,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Mohit Singh<br> <span>VP (Engineering)</span></p>
+                                        <p>Rohit Singh<br> <span>VP (Engineering)</span></p>
                                     </div>
                                 </div>
                             </div>
