--- a/src/app/exam/report/report.component.html
+++ b/src/app/exam/report/report.component.html
@@ -12,7 +12,7 @@
             <h2 class="practiceReportHeading">Practice Report Card</h2>
             <div class="reportDetails">
 
-              <h5 class="reportCard">Attempt Number - <span class="spanContent">2</span> </h5>
+              <!-- <h5 class="reportCard">Attempt Number - <span class="spanContent">2</span> </h5> -->
             </div>
           </div>
         <div>
