Add the profile img dynamically and give the profile update option to the user

--- a/src/app/exam/quize-report/quize-report.component.html
+++ b/src/app/exam/quize-report/quize-report.component.html
@@ -179,7 +179,7 @@
               <div>
                 <p *ngIf="percentage >= 95">
                   You are excellent in <b>{{ quiz_pool_name }}</b> with
-                  <b>{{ percentage }}%</b> and grade is <b>A++. </b>/b> Well done, keep it up!
+                  <b>{{ percentage }}%</b> and grade is <b>A++. </b> Well done, keep it up!
                 </p>
 
                 <p *ngIf="percentage >= 85 && percentage <= 94">
