--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
 body {
-    background: rgb(255, 247, 247) !important; 
+    background: #f4f4f5 !important; 
     font-family: 'Roboto', sans-serif;
 
     /* If want then add the image on cursor as well */
