--- a/src/app/home-content/home-content.component.css
+++ b/src/app/home-content/home-content.component.css
@@ -13,13 +13,15 @@ margin-left: -20% !important;
 .btnLogin {
     margin-top: 78px;
   }
+
 .titleOne {
-    color: #ff4935;
+    color: gray;
     font-family: "jaldi", Sans-serif;
-    font-size: 22px;
+    font-size: 28px;
     text-transform: uppercase;
     line-height: 1.5em;
     padding-top: 12vh;
+    font-weight: 700;
   }
   .titleTwo {
     color: #080f44;
