--- a/src/app/exam/subjects/subjects.component.css
+++ b/src/app/exam/subjects/subjects.component.css
@@ -14,6 +14,8 @@ hr {
     color: #727270;
     font-size: 32px;
     font-weight: bold;
+    /* background: #076fe5; */
+
   }
   
   .allExams .topRow .card {
@@ -25,20 +27,16 @@ hr {
     margin-top: 20px;
     cursor: pointer;
     transition: all .5s;
+    /* background: border-box; */
+    /* color: white !important; */
   }
     
   .allExams .topRow .card h5 {
     color: #483d8c;
     font-family: "jaldi";
     font-size: 25px;
-    /* padding-top: 50px;
-    padding-left: 5px;
-    padding-right: 5px; */
     height: 54px;
     font-weight: bold;
-    /* display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -147,4 +145,13 @@ hr {
       box-shadow: 0 -8px #076fe5;
       height: 40px;
     }
+  }
+  .containerr{
+    /* background: #74a6e0; */
+    height: 600px;
+    text-align: center;
+    /* border-radius: 15px; */
+    background-image: url(src/assets/img/stdbg.jpg);
+    background-size: cover;
+    overflow: visible;
   }
