--- a/src/app/exam/subjects/subjects.component.html
+++ b/src/app/exam/subjects/subjects.component.html
@@ -1,11 +1,12 @@
 <div class="displayy-container"> 
-<div class="container allExams">
+<div class="containerr allExams">
     <div class="row topRow">
 
         <div class="col-lg-12" *ngIf="!showLoader">
-            <h2>Subjects:-</h2>
+            <h2 style="color: aliceblue;">Subjects:-</h2>
             <hr style="border: 2px solid black;">
-            <div class="row">
+            <div class="showBackgroud">
+            <div class="row" style="justify-content: center;">
                 <ng-container *ngFor="let subject of subjects">
                 <div class="col-lg-3 col-md-4 col-sm-6" style="width: 300px;">
                     <div class="card" (click)="selectCourse(subject.id, subject.name)">
@@ -15,6 +16,8 @@
                 </div>
             </ng-container>
             </div>
+            </div>
+
         </div>
 
         <div class="loader" *ngIf="showLoader">
