--- a/src/app/exam/mix-test-details/mix-test-details.component.css
+++ b/src/app/exam/mix-test-details/mix-test-details.component.css
@@ -32,7 +32,7 @@
 
   .allHistory .card {
     border: none;
-    background: #ffffff;
+    background-image: radial-gradient(circle at 13% 47%, rgba(255,0,0, 0.03) 0%, rgba(255,0,0, 0.03) 25%,transparent 25%, transparent 100%),radial-gradient(circle at 28% 63%, rgba(9,9,9, 0.03) 0%, rgba(9,9,9, 0.03) 16%,transparent 16%, transparent 100%),radial-gradient(circle at 81% 56%, rgba(0,0,0, 0.03) 0%, rgba(0,0,0, 0.03) 12%,transparent 12%, transparent 100%),radial-gradient(circle at 26% 48%, rgba(12,155,83, 0.03) 0%, rgba(12,155,83, 0.03) 6%,transparent 6%, transparent 100%),radial-gradient(circle at 97% 17%, rgba(150, 150, 150,0.03) 0%, rgba(150, 150, 150,0.03) 56%,transparent 56%, transparent 100%),radial-gradient(circle at 50% 100%, rgba(234,15,234, 0.05) 0%, rgba(234,15,234, 0.05) 36%,transparent 36%, transparent 100%),radial-gradient(circle at 55% 52%, rgba(227,212,8, 0.09) 0%, rgba(227,212,8, 0.09) 6%,transparent 6%, transparent 100%),linear-gradient(90deg, rgb(236,236,236),rgb(236,236,236));
     border-radius: 10px;
     box-shadow: -3px -12px 27px -13px rgb(0 0 0 / 22%);
     min-height: 250px;
