--- a/src/app/exam/subjects/subjects.component.css
+++ b/src/app/exam/subjects/subjects.component.css
@@ -5,6 +5,8 @@ hr {
     min-height: 100vh;
     padding-top: 3vh;
     padding-bottom: 3vh;
+    background-image: radial-gradient(circle at center center, transparent,rgb(255,255,255)),linear-gradient(309deg, rgba(90, 90, 90,0.05) 0%, rgba(90, 90, 90,0.05) 50%,rgba(206, 206, 206,0.05) 50%, rgba(206, 206, 206,0.05) 100%),linear-gradient(39deg, rgba(13, 13, 13,0.05) 0%, rgba(13, 13, 13,0.05) 50%,rgba(189, 189, 189,0.05) 50%, rgba(189, 189, 189,0.05) 100%),linear-gradient(144deg, rgba(249, 249, 249,0.05) 0%, rgba(249, 249, 249,0.05) 50%,rgba(111, 111, 111,0.05) 50%, rgba(111, 111, 111,0.05) 100%),linear-gradient(166deg, rgba(231, 231, 231,0.05) 0%, rgba(231, 231, 231,0.05) 50%,rgba(220, 220, 220,0.05) 50%, rgba(220, 220, 220,0.05) 100%),linear-gradient(212deg, rgba(80, 80, 80,0.05) 0%, rgba(80, 80, 80,0.05) 50%,rgba(243, 243, 243,0.05) 50%, rgba(243, 243, 243,0.05) 100%),radial-gradient(circle at center center, hsl(107,19%,100%),hsl(107,19%,100%));
+    /* border: 1px solid black; */
   }
   .allExams hr {
     margin-top: 0px !important;
@@ -17,18 +19,21 @@ hr {
     /* background: #076fe5; */
 
   }
+  .subjectsData{
+    /* border: 1px solid black; */
+    width: 99%;
+    margin-left: 5px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    padding: 20px;
+  }
   
   .allExams .topRow .card {
     box-shadow: 0 -2px 2px -1px #333, -5px 0 5px -3px #333, 5px 0 5px -2px #333;
     border: none;
     border-radius: 10px;
-    /* padding-top: 15px; */
-    /* padding-bottom: 15px; */
     margin-top: 20px;
     cursor: pointer;
-    transition: all .5s;
-    /* background: border-box; */
-    /* color: white !important; */
+    transition: all .5s
   }
     
   .allExams .topRow .card h5 {
@@ -151,7 +156,11 @@ hr {
     height: 600px;
     text-align: center;
     /* border-radius: 15px; */
-    background-image: url(src/assets/img/stdbg.jpg);
+    /* background-image: url(src/assets/img/stdbg.jpg); */
     background-size: cover;
     overflow: visible;
+  }
+
+  .subjects{
+    background-image: linear-gradient(127deg, transparent 0%, transparent 55%,rgba(12,12,12, 0.04) 55%, rgba(12,12,12, 0.04) 76%,transparent 76%, transparent 100%),linear-gradient(217deg, transparent 0%, transparent 14%,rgba(12,12,12, 0.04) 14%, rgba(12,12,12, 0.04) 41%,transparent 41%, transparent 100%),linear-gradient(127deg, transparent 0%, transparent 2%,rgba(12,12,12, 0.04) 2%, rgba(12,12,12, 0.04) 18%,transparent 18%, transparent 100%),linear-gradient(217deg, transparent 0%, transparent 61%,rgba(12,12,12, 0.04) 61%, rgba(12,12,12, 0.04) 71%,transparent 71%, transparent 100%),linear-gradient(172deg, rgb(238,238,238),rgb(238,238,238));
   }
