--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -5,6 +5,6 @@
         </div>
         <h2>We are sorry, Page not found!</h2>
         <p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
-        <a routerLink="/home-content">Back To Homepage</a>
+        <a routerLink="/dashboard">Back To Homepage</a>
     </div>
 </div>
