--- a/src/app/exam/subjects/subjects.component.html
+++ b/src/app/exam/subjects/subjects.component.html
@@ -5,12 +5,15 @@
             <h2 style="color: rgb(10, 10, 10);">Subjects:-</h2>
             <hr style="border: 2px solid black;">
             <div class="showBackgroud">
-            <div class="row subjectsData" style="justify-content: center;">
+            <div class="row subjectsData">
+            <!-- <div class="row subjectsData" style="justify-content: center;"> -->
                 <ng-container *ngFor="let subject of subjects">
-                <div class="col-lg-3 col-md-4 col-sm-6 " style="width: 300px;">
+                <div class="col-lg-3 col-md-4 col-sm-6 " style="width: 280px;">
                     <div class="card subjects" (click)="selectCourse(subject.id, subject.name)">
                         <h5 class="text-center">{{subject.name | uppercase}}</h5>
-                        <!-- <h6>{{subject.description}}</h6> -->
+                        <!-- <hr> -->
+                        <!-- <h6>-:Discription:-</h6>
+                        <h6>{{subject.description}}</h6> -->
                     </div>
                 </div>
             </ng-container>
