--- a/src/app/home-content/home-content.component.css
+++ b/src/app/home-content/home-content.component.css
@@ -256,7 +256,7 @@ margin-left: -20% !important;
   
   .preparation .prepAllCards .card p {
     color: #000000;
-    font-family: "Jaldi", sans-serif;
+    /* font-family: "Jaldi", sans-serif; */
     font-size: 18px;
     font-weight: 400;
     line-height: 21px;
