--- a/src/app/home-content/home-content.component.html
+++ b/src/app/home-content/home-content.component.html
@@ -5,7 +5,7 @@
             <div class="col-lg-7 col-md-6 headerContent">
                 <h2 class="titleOne">Grow with the best</h2>
                 <h1 class="titleTwo">AI-Enabled Exam  <br> Preparation Platform</h1>
-                <button class="btn btnLogin" routerLink="">Start Now</button>
+                <!-- <button class="btn btnLogin" routerLink="">Start Now</button> -->
             </div>
             <div class="col-lg-5 col-md-6">
                 <div class="row justify-content-center">
